[package]
name = "rust"
version = "0.1.0"
authors = ["jaredly"]

[dependencies]
nalgebra = "*"
gl = "*"
rustc-serialize = "0.3"
bincode = "*"
docopt = "0.6.69"
time = "0.1"
image = "*"
libc = "*"
glfw = "*"

[dependencies.kiss3d]
path = "kiss3d"
# git = "https://github.com/sebcrozet/kiss3d"

[profile.release]
# lto = true
